styles.css
@import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");

:root {
  --primary-color: #a5ac1e;
  --secondary-color: #73790f;
  --primary-font: "Ubuntu", sans-serif;
}

.conatianer-main {
  min-height: 100vh;
}

.container-center-80 {
  width: 80%;
  margin: auto;
}

header,
footer {
  width: 100%;
  padding: 0.5rem 0;
  text-align: center;
  font-family: var(--primary-font);
  color: white;
  background-color: var(--primary-color);
}

.translator {
  text-align: center;
  padding: 2rem 0;
  width: 80%;
  margin: auto;
}

.translator textarea {
  min-width: 100%;
  display: block;
  border: 3px solid var(--secondary-color);
}

.btn-translator {
  box-sizing: border-box;
  margin: 1rem 0rem;
  padding: 0.5rem 1rem;
  background-color: var(--primary-color);
  border: 2px solid var(--secondary-color);
  color: white;
  font-weight: bolder;
  font-family: var(--primary-font);
  font-size: medium;
  cursor: pointer;
}

.btn-translator:hover {
  background-color: var(--secondary-color);
}

span {
  display: block;
  text-align: left;
  font-size: 1.25rem;
  font-weight: bold;
  margin-bottom: 0.4rem;
  color: var(--primary-color);
}

.output-text {
  width: 100%;
  min-height: 10rem;
  border: 3px solid var(--secondary-color);
  margin-bottom: 10px;
}

footer a {
  text-decoration: none;
  color: white;
}

footer {
  padding: 1rem;
}

footer ul {
    padding-inline-start: 0px;
  }
  
.list-inline li {
  display: inline;
}

.link {
  text-decoration: none;
  padding: 0.5rem;
  margin: 0.5rem;
  width: max-content;
  min-width: 140px;
  font-size: 1.5rem;
}

